主要 更新数据结构

--- a/text/gaozhong/集合间的基本关系.md
+++ b/text/gaozhong/集合间的基本关系.md
@@ -1,7 +1,7 @@
 ---
-"id":"0abcda",
-"base":["0"],
-"newcode":["Mathlib.Set.Subset.refl","Mathlib.Set.Subset.trans"]
+"id": "e3cc7c91",
+"name": "集合间的基本关系",
+"base": ["db5c4ca7"]
 ---
 
 结论一（自反性）：
