数学 可以嵌入lean代码

--- a/text/gaozhong/简单逻辑.md
+++ b/text/gaozhong/简单逻辑.md
@@ -114,24 +114,20 @@
 
 上面的操作，叫消去规则和引入规则，我们都写出定义（注意，并不是正确的 lean 语法格式，仅示意）。
 
-合取消去：`(h1 ∧ h2) ⊢ h1`或`(h1 ∧ h2) ⊢ h2`
+合取消去：`(h1 ∧ h2) ⊢ h1`或`(h1 ∧ h2) ⊢ h2` [[p:70452a2d?hide&from=4&to=8]]
 
-合取引入：`(h1) (h2) ⊢ (h1 ∧ h2)`
+合取引入：`(h1) (h2) ⊢ (h1 ∧ h2)` [[p:70452a2d?hide&from=12&to=15]]
 
-析取消去：`(h1 ∨ h2) (h1 → p) (h2 → p) ⊢ p`
+析取消去：`(h1 ∨ h2) (h1 → p) (h2 → p) ⊢ p` [[p:70452a2d?hide&from=19&to=22]]
 
-析取引入：`(h1) ⊢ (h1 ∨ h2)`或`(h2) ⊢ (h1 ∨ h2)`
+析取引入：`(h1) ⊢ (h1 ∨ h2)`或`(h2) ⊢ (h1 ∨ h2)` [[p:70452a2d?hide&from=25&to=31]]
 
-蕴含消去：`(h1 → h2) (h1) ⊢ h2`
+蕴含消去：`(h1 → h2) (h1) ⊢ h2` [[p:70452a2d?hide&from=35&to=36]]
 
-蕴含引入：`(h) (h1) ⊢ h2` 推出 `(h) ⊢ h1 → h2`
+蕴含引入：`(h) (h1) ⊢ h2` 推出 `(h) ⊢ h1 → h2` [[p:70452a2d?hide&from=39&to=41]]
 
-等价消去：`(h1 ↔ h2) (h1) ⊢ h2`或`(h1 ↔ h2) (h2) ⊢ h1`
+等价消去：`(h1 ↔ h2) (h1) ⊢ h2`或`(h1 ↔ h2) (h2) ⊢ h1` [[p:70452a2d?hide&from=44&to=48]]
 
-等价引入：`(h1 → h2) (h2 → h1) ⊢ (h1 ↔ h2)`
+等价引入：`(h1 → h2) (h2 → h1) ⊢ (h1 ↔ h2)` [[p:70452a2d?hide&from=52&to=57]]
 
 我们先不管否定。
-
-以下是证明：
-
-[](p:0123adf?showAnswer)
