内容 集合间基本关系

--- a/text/gaozhong/集合间的基本关系.md
+++ b/text/gaozhong/集合间的基本关系.md
@@ -4,10 +4,26 @@
 "base": ["db5c4ca7"]
 ---
 
-结论一（自反性）：
+# 集合间的基本关系
 
-`Subset.refl`即`A ⊆ A`，自己尝试[证明](q:sssss)
+我们研究集合间的关系，要从定义出发，也就是元素的属于问题。
 
-结论二（传递性）:
+## 子集
 
-`Subset.trans`，可以类比`Nat.trans`，自己尝试[证明](q:sssxxx)
+如果集合`A`的所有元素都是集合`B`的元素，我们就说`A`是`B`的子集，记作`A ⊆ B`。lean中`mem_of_subset`表示了这个定义：`l₁ ⊆ l₂ : a ∈ l₁ → a ∈ l₂`，用`Subset`可以使用子集相关的结论。
+
+根据定义，我们可以得到说`A`里面所有的元素都可以对应到`B`里面，`B`可以有元素不对应到`A`，也可以全都对应到`A`（这个说明`A = B`）
+
+下面是使用这一定义的例子：
+
+[[p:c3bb856c?answer&from=8&to=9]]
+
+我们还可以得到[[p:6586af97?th&from=8]]，也就是自反性`Subset.refl`
+
+传递性`Subset.trans`：[[p:fd6b8b46?th&from=6]]，可以类比`Nat.trans`
+
+如果要证明两个集合相等，意味着他们的元素的相同，他们互为子集：[[p:f0140d82?th&from=8]]
+
+像`A ⊆ B ∧ A ≠ B`，我们叫`A`为`B`的真子集，记作`A ⫋ B`
+
+关于`∅`，`∅ ⊆ 任何集合`
